--- a/accounts.html
+++ b/accounts.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 0;
-      font-family: monospace;
+      font-family: Arial, sans-serif;
       background-color: black;
       color: white;
     }
@@ -144,13 +144,14 @@
 
   <script>
     const firebaseConfig = {
-      apiKey: "AIzaSyClW4zHDde1rQm6RkHQcD2rM0sklBBgdrM",
+      apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
       authDomain: "void-d9ec4.firebaseapp.com",
       databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
       projectId: "void-d9ec4",
       storageBucket: "void-d9ec4.appspot.com",
       messagingSenderId: "267268035851",
-      appId: "1:267268035851:web:d535fe4175c06f170f3e0e"
+      appId: "1:267268035851:web:1e5ab79c51db42160f3e0e",
+      measurementId: "G-ZYMQ3Z6LC5"
     };
 
     firebase.initializeApp(firebaseConfig);
