--- a/accounts.html
+++ b/accounts.html
@@ -3,263 +3,139 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Account - VOID</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: black;
-      color: white;
-    }
-
-    header {
-      padding: 20px;
-      text-align: center;
-      background-color: #111;
-      font-size: 28px;
-      font-weight: bold;
-      border-bottom: 1px solid #444;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    #navToggle {
-      cursor: pointer;
-      font-size: 28px;
-      margin-left: 12px;
-    }
-
-    #navMenu {
-      display: none;
-      margin-top: 10px;
-      font-family: monospace;
-      color: white;
-      text-align: center;
-    }
-
-    #navMenu div {
-      margin: 4px 0;
-      cursor: pointer;
-    }
-
-    #navMenu div:hover {
-      text-decoration: underline;
-    }
-
-    .container {
-      padding: 30px;
-      text-align: center;
-    }
-
-    input, textarea {
-      background: #111;
-      border: 1px solid #333;
-      color: white;
-      padding: 8px;
-      margin: 6px;
-      width: 80%;
-      max-width: 300px;
-    }
-
-    button {
-      margin: 10px;
-      padding: 10px 20px;
-      border: none;
-      background-color: #333;
-      color: white;
-      cursor: pointer;
-      border-radius: 4px;
-    }
-
-    button:hover {
-      background-color: #555;
-    }
-
-    .hidden {
-      display: none;
-    }
-
-    img {
-      max-width: 100px;
-      border-radius: 50%;
-      margin-top: 10px;
-    }
-  </style>
-
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-database-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-storage-compat.js"></script>
+  <title>Edit Profile</title>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js"></script>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-
-  <header>
-    powered by the VOID
-    <span id="navToggle" onclick="toggleNav()">≡</span>
+<body style="background:black; color:white; font-family:sans-serif;">
+  <header style="padding: 10px; text-align: center;">
+    <div style="font-size: 24px; font-weight: bold;">VOID</div>
+    <nav style="margin-top: 10px;">
+      <a href="index.html" style="margin: 0 10px;">Home</a>
+      <a href="view-profiles.html" style="margin: 0 10px;">View Profiles</a>
+      <a href="chat.html" style="margin: 0 10px;">Global Chat</a>
+      <a id="editProfileBtn" href="edit-profile.html" style="margin: 0 10px;">Edit Profile</a>
+      <button id="logoutBtn" style="margin: 0 10px;">Logout</button>
+    </nav>
   </header>
 
-  <div id="navMenu">
-    <div onclick="location.href='index.html'">⟁ Enter the Abyss</div>
-    <div onclick="location.href='echoes.html'">⟁ Echoes</div>
-    <div onclick="location.href='accounts.html'">⟁ Account</div>
-    <div onclick="alert('Coming soon')">⟁ Dark Messenger</div>
-    <div onclick="alert('Coming soon')">⟁ System Core</div>
-  </div>
-
-  <div class="container">
-    <div id="authSection">
-      <button onclick="toggleAuth()">⟳ Switch to Sign Up</button>
-      <div id="loginForm">
-        <h2>Login</h2>
-        <input type="email" id="loginEmail" placeholder="Email"><br>
-        <input type="password" id="loginPassword" placeholder="Password"><br>
-        <button onclick="login()">→ Login</button>
-      </div>
-
-      <div id="signupForm" class="hidden">
-        <h2>Sign Up</h2>
-        <input type="text" id="signupUsername" placeholder="Username (min 6 chars)"><br>
-        <input type="email" id="signupEmail" placeholder="Email"><br>
-        <input type="password" id="signupPassword" placeholder="Password (min 8 chars)"><br>
-        <button onclick="signup()">→ Sign Up</button>
-      </div>
+  <main style="max-width: 600px; margin: 40px auto; text-align: center;">
+    <h2>Your Profile</h2>
+    <div id="profileView">
+      <img id="profilePicView" src="" alt="Profile Picture" style="width:100px;height:100px;border-radius:50%;"><br>
+      <p><strong>Name:</strong> <span id="nameView"></span></p>
+      <p><strong>Age:</strong> <span id="ageView"></span></p>
+      <p><strong>Gender:</strong> <span id="genderView"></span></p>
+      <p><strong>Bio:</strong> <span id="bioView"></span></p>
     </div>
 
-    <div id="profileSection" class="hidden">
-      <h2>Your Profile</h2>
-      <p><strong>Email:</strong> <span id="userEmail"></span></p>
-      <p><strong>Username:</strong> <span id="userUsername"></span></p>
-      <input type="text" id="profileName" placeholder="Name"><br>
-      <input type="number" id="profileAge" placeholder="Age"><br>
-      <input type="text" id="profileGender" placeholder="Gender"><br>
-      <textarea id="profileBio" placeholder="Bio"></textarea><br>
-      <input type="file" id="profilePicture"><br>
-      <img id="previewPic" src="#" class="hidden"><br>
-      <button onclick="saveProfile()">✓ Save Profile</button>
-      <button onclick="logout()">⇦ Log Out</button>
+    <div id="profileEdit" style="display:none;">
+      <input type="text" id="nameInput" placeholder="Name" /><br><br>
+      <input type="number" id="ageInput" placeholder="Age" /><br><br>
+      <input type="text" id="genderInput" placeholder="Gender" /><br><br>
+      <textarea id="bioInput" placeholder="Bio"></textarea><br><br>
+      <input type="text" id="picUrlInput" placeholder="Profile Picture URL" /><br><br>
+      <button id="saveBtn">Save Profile</button>
     </div>
-  </div>
+
+    <button id="editModeBtn">Edit</button>
+  </main>
 
   <script>
     const firebaseConfig = {
-      apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
+      apiKey: "AIzaSyBWyVO_0H92Yv99co5AbQawfA3vKjM30cY",
       authDomain: "void-d9ec4.firebaseapp.com",
       databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
       projectId: "void-d9ec4",
       storageBucket: "void-d9ec4.appspot.com",
       messagingSenderId: "267268035851",
-      appId: "1:267268035851:web:1e5ab79c51db42160f3e0e",
-      measurementId: "G-ZYMQ3Z6LC5"
+      appId: "1:267268035851:web:d535fe4175c06f170f3e0e"
     };
 
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
     const db = firebase.database();
-    const storage = firebase.storage();
 
-    function toggleNav() {
-      const menu = document.getElementById("navMenu");
-      menu.style.display = menu.style.display === "block" ? "none" : "block";
-    }
+    const nameView = document.getElementById("nameView");
+    const ageView = document.getElementById("ageView");
+    const genderView = document.getElementById("genderView");
+    const bioView = document.getElementById("bioView");
+    const profilePicView = document.getElementById("profilePicView");
 
-    function toggleAuth() {
-      const login = document.getElementById("loginForm");
-      const signup = document.getElementById("signupForm");
-      const toggleBtn = document.querySelector("button[onclick='toggleAuth()']");
-      if (login.classList.contains("hidden")) {
-        login.classList.remove("hidden");
-        signup.classList.add("hidden");
-        toggleBtn.textContent = "⟳ Switch to Sign Up";
-      } else {
-        login.classList.add("hidden");
-        signup.classList.remove("hidden");
-        toggleBtn.textContent = "⟳ Switch to Login";
-      }
-    }
+    const nameInput = document.getElementById("nameInput");
+    const ageInput = document.getElementById("ageInput");
+    const genderInput = document.getElementById("genderInput");
+    const bioInput = document.getElementById("bioInput");
+    const picUrlInput = document.getElementById("picUrlInput");
 
-    function login() {
-      const email = document.getElementById("loginEmail").value;
-      const password = document.getElementById("loginPassword").value;
-      auth.signInWithEmailAndPassword(email, password).catch(err => alert(err.message));
-    }
+    const profileView = document.getElementById("profileView");
+    const profileEdit = document.getElementById("profileEdit");
+    const saveBtn = document.getElementById("saveBtn");
+    const editModeBtn = document.getElementById("editModeBtn");
+    const logoutBtn = document.getElementById("logoutBtn");
 
-    function signup() {
-      const username = document.getElementById("signupUsername").value.trim();
-      const email = document.getElementById("signupEmail").value.trim();
-      const password = document.getElementById("signupPassword").value;
-
-      if (username.length < 6) return alert("Username must be at least 6 characters");
-      if (password.length < 8) return alert("Password must be at least 8 characters");
-
-      auth.createUserWithEmailAndPassword(email, password).then(cred => {
-        return db.ref("users/" + cred.user.uid).set({
-          username: username,
-          email: email
-        });
-      }).catch(err => alert(err.message));
-    }
-
-    function logout() {
-      auth.signOut();
-    }
-
-    function saveProfile() {
-      const user = auth.currentUser;
-      if (!user) return;
-
-      const uid = user.uid;
-      const name = document.getElementById("profileName").value;
-      const age = document.getElementById("profileAge").value;
-      const gender = document.getElementById("profileGender").value;
-      const bio = document.getElementById("profileBio").value;
-      const picture = document.getElementById("profilePicture").files[0];
-
-      const userRef = db.ref("users/" + uid);
-      userRef.update({ name, age, gender, bio });
-
-      if (picture) {
-        const picRef = storage.ref("profilePics/" + uid);
-        picRef.put(picture).then(() => {
-          return picRef.getDownloadURL();
-        }).then(url => {
-          userRef.update({ profilePic: url });
-          const pic = document.getElementById("previewPic");
-          pic.src = url;
-          pic.classList.remove("hidden");
-        }).catch(err => alert("Error uploading picture: " + err.message));
-      }
-    }
+    let currentUserId = null;
 
     auth.onAuthStateChanged(user => {
-      const authSection = document.getElementById("authSection");
-      const profileSection = document.getElementById("profileSection");
-
       if (user) {
-        authSection.classList.add("hidden");
-        profileSection.classList.remove("hidden");
-        document.getElementById("userEmail").textContent = user.email;
-
-        const userRef = db.ref("users/" + user.uid);
-        userRef.once("value").then(snapshot => {
-          const data = snapshot.val() || {};
-          document.getElementById("userUsername").textContent = data.username || "";
-          document.getElementById("profileName").value = data.name || "";
-          document.getElementById("profileAge").value = data.age || "";
-          document.getElementById("profileGender").value = data.gender || "";
-          document.getElementById("profileBio").value = data.bio || "";
-          if (data.profilePic) {
-            const pic = document.getElementById("previewPic");
-            pic.src = data.profilePic;
-            pic.classList.remove("hidden");
-          }
-        });
+        currentUserId = user.uid;
+        loadProfile(currentUserId);
       } else {
-        authSection.classList.remove("hidden");
-        profileSection.classList.add("hidden");
+        window.location.href = "login.html";
       }
     });
+
+    function loadProfile(uid) {
+      db.ref("users/" + uid).once("value").then(snapshot => {
+        const data = snapshot.val() || {};
+        nameView.textContent = data.name || '';
+        ageView.textContent = data.age || '';
+        genderView.textContent = data.gender || '';
+        bioView.textContent = data.bio || '';
+        profilePicView.src = data.profilePicture || 'https://via.placeholder.com/100';
+
+        // Populate edit inputs
+        nameInput.value = data.name || '';
+        ageInput.value = data.age || '';
+        genderInput.value = data.gender || '';
+        bioInput.value = data.bio || '';
+        picUrlInput.value = data.profilePicture || '';
+
+        setEditMode(false);
+      });
+    }
+
+    saveBtn.onclick = () => {
+      const name = nameInput.value.trim();
+      const age = ageInput.value.trim();
+      const gender = genderInput.value.trim();
+      const bio = bioInput.value.trim();
+      const profilePicture = picUrlInput.value.trim();
+
+      db.ref("users/" + currentUserId).update({
+        name, age, gender, bio, profilePicture
+      }).then(() => {
+        loadProfile(currentUserId);
+      });
+    };
+
+    editModeBtn.onclick = () => {
+      setEditMode(true);
+    };
+
+    logoutBtn.onclick = () => {
+      auth.signOut().then(() => {
+        window.location.href = "index.html";
+      });
+    };
+
+    function setEditMode(isEdit) {
+      profileView.style.display = isEdit ? "none" : "block";
+      profileEdit.style.display = isEdit ? "block" : "none";
+      editModeBtn.style.display = isEdit ? "none" : "inline-block";
+    }
   </script>
 </body>
 </html>
