--- a/accounts.html
+++ b/accounts.html
@@ -3,47 +3,134 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Edit Profile</title>
+  <title>Account Portal</title>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js"></script>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      background: black;
+      color: white;
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      padding: 20px 0;
+      font-size: 28px;
+      font-weight: bold;
+    }
+    nav {
+      margin-top: 10px;
+    }
+    nav a, nav button {
+      color: white;
+      margin: 0 10px;
+      text-decoration: none;
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    main {
+      max-width: 600px;
+      margin: 40px auto;
+      padding: 20px;
+    }
+    input, textarea {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+      background: #111;
+      color: white;
+      border: 1px solid #333;
+      border-radius: 4px;
+    }
+    button {
+      padding: 10px 20px;
+      margin: 10px 0;
+      background: #222;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    #profilePicView {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 10px;
+    }
+    .hidden {
+      display: none;
+    }
+  </style>
 </head>
-<body style="background:black; color:white; font-family:sans-serif;">
-  <header style="padding: 10px; text-align: center;">
-    <div style="font-size: 24px; font-weight: bold;">VOID</div>
-    <nav style="margin-top: 10px;">
-      <a href="index.html" style="margin: 0 10px;">Home</a>
-      <a href="view-profiles.html" style="margin: 0 10px;">View Profiles</a>
-      <a href="chat.html" style="margin: 0 10px;">Global Chat</a>
-      <a id="editProfileBtn" href="edit-profile.html" style="margin: 0 10px;">Edit Profile</a>
-      <button id="logoutBtn" style="margin: 0 10px;">Logout</button>
-    </nav>
-  </header>
+<body>
 
-  <main style="max-width: 600px; margin: 40px auto; text-align: center;">
-    <h2>Your Profile</h2>
-    <div id="profileView">
-      <img id="profilePicView" src="" alt="Profile Picture" style="width:100px;height:100px;border-radius:50%;"><br>
-      <p><strong>Name:</strong> <span id="nameView"></span></p>
-      <p><strong>Age:</strong> <span id="ageView"></span></p>
-      <p><strong>Gender:</strong> <span id="genderView"></span></p>
-      <p><strong>Bio:</strong> <span id="bioView"></span></p>
+  <header>VOID</header>
+  <nav>
+    <a href="index.html">Home</a>
+    <button id="logoutBtn" class="hidden">Logout</button>
+  </nav>
+
+  <main>
+    <!-- Toggle Form -->
+    <div id="authSection">
+      <div>
+        <button id="showLogin">Login</button>
+        <button id="showSignup">Sign Up</button>
+      </div>
+
+      <!-- Login Form -->
+      <div id="loginForm">
+        <h2>Login</h2>
+        <input type="email" id="loginEmail" placeholder="Email" />
+        <input type="password" id="loginPassword" placeholder="Password" />
+        <button id="loginBtn">Login</button>
+        <p id="loginError" style="color:red;"></p>
+      </div>
+
+      <!-- Signup Form -->
+      <div id="signupForm" class="hidden">
+        <h2>Sign Up</h2>
+        <input type="email" id="signupEmail" placeholder="Email" />
+        <input type="text" id="signupUsername" placeholder="Username (min 6 chars)" />
+        <input type="password" id="signupPassword" placeholder="Password (min 8 chars)" />
+        <button id="signupBtn">Sign Up</button>
+        <p id="signupError" style="color:red;"></p>
+      </div>
     </div>
 
-    <div id="profileEdit" style="display:none;">
-      <input type="text" id="nameInput" placeholder="Name" /><br><br>
-      <input type="number" id="ageInput" placeholder="Age" /><br><br>
-      <input type="text" id="genderInput" placeholder="Gender" /><br><br>
-      <textarea id="bioInput" placeholder="Bio"></textarea><br><br>
-      <input type="text" id="picUrlInput" placeholder="Profile Picture URL" /><br><br>
-      <button id="saveBtn">Save Profile</button>
-    </div>
+    <!-- Profile Section -->
+    <div id="profileSection" class="hidden">
+      <h2>Your Profile</h2>
+      <div id="profileView">
+        <img id="profilePicView" src="" alt="Profile Picture"><br>
+        <p><strong>Name:</strong> <span id="nameView"></span></p>
+        <p><strong>Age:</strong> <span id="ageView"></span></p>
+        <p><strong>Gender:</strong> <span id="genderView"></span></p>
+        <p><strong>Bio:</strong> <span id="bioView"></span></p>
+      </div>
 
-    <button id="editModeBtn">Edit</button>
+      <div id="profileEdit" class="hidden">
+        <input type="text" id="nameInput" placeholder="Name" />
+        <input type="number" id="ageInput" placeholder="Age" />
+        <input type="text" id="genderInput" placeholder="Gender" />
+        <textarea id="bioInput" placeholder="Bio"></textarea>
+        <input type="text" id="picUrlInput" placeholder="Profile Picture URL" />
+        <button id="saveProfileBtn">Save Profile</button>
+      </div>
+
+      <button id="editProfileBtn">Edit Profile</button>
+    </div>
   </main>
 
   <script>
+    // Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyBWyVO_0H92Yv99co5AbQawfA3vKjM30cY",
       authDomain: "void-d9ec4.firebaseapp.com",
@@ -57,6 +144,28 @@
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
     const db = firebase.database();
+
+    // Elements
+    const authSection = document.getElementById("authSection");
+    const profileSection = document.getElementById("profileSection");
+    const logoutBtn = document.getElementById("logoutBtn");
+
+    const showLogin = document.getElementById("showLogin");
+    const showSignup = document.getElementById("showSignup");
+
+    const loginForm = document.getElementById("loginForm");
+    const signupForm = document.getElementById("signupForm");
+
+    const loginEmail = document.getElementById("loginEmail");
+    const loginPassword = document.getElementById("loginPassword");
+    const loginBtn = document.getElementById("loginBtn");
+    const loginError = document.getElementById("loginError");
+
+    const signupEmail = document.getElementById("signupEmail");
+    const signupUsername = document.getElementById("signupUsername");
+    const signupPassword = document.getElementById("signupPassword");
+    const signupBtn = document.getElementById("signupBtn");
+    const signupError = document.getElementById("signupError");
 
     const nameView = document.getElementById("nameView");
     const ageView = document.getElementById("ageView");
@@ -72,31 +181,94 @@
 
     const profileView = document.getElementById("profileView");
     const profileEdit = document.getElementById("profileEdit");
-    const saveBtn = document.getElementById("saveBtn");
-    const editModeBtn = document.getElementById("editModeBtn");
-    const logoutBtn = document.getElementById("logoutBtn");
+    const editProfileBtn = document.getElementById("editProfileBtn");
+    const saveProfileBtn = document.getElementById("saveProfileBtn");
 
     let currentUserId = null;
 
+    // Toggle Login/Signup
+    showLogin.onclick = () => {
+      signupForm.classList.add("hidden");
+      loginForm.classList.remove("hidden");
+    };
+
+    showSignup.onclick = () => {
+      loginForm.classList.add("hidden");
+      signupForm.classList.remove("hidden");
+    };
+
+    // Login
+    loginBtn.onclick = () => {
+      const email = loginEmail.value;
+      const password = loginPassword.value;
+      auth.signInWithEmailAndPassword(email, password)
+        .then(() => {
+          loginError.textContent = "";
+        })
+        .catch(err => {
+          loginError.textContent = err.message;
+        });
+    };
+
+    // Signup
+    signupBtn.onclick = () => {
+      const email = signupEmail.value;
+      const username = signupUsername.value.trim();
+      const password = signupPassword.value;
+
+      if (username.length < 6) {
+        signupError.textContent = "Username must be at least 6 characters.";
+        return;
+      }
+      if (password.length < 8) {
+        signupError.textContent = "Password must be at least 8 characters.";
+        return;
+      }
+
+      auth.createUserWithEmailAndPassword(email, password)
+        .then(cred => {
+          db.ref("users/" + cred.user.uid).set({
+            username: username,
+            name: "",
+            age: "",
+            gender: "",
+            bio: "",
+            profilePicture: "https://via.placeholder.com/120",
+            lastOnline: Date.now()
+          });
+          signupError.textContent = "";
+        })
+        .catch(err => {
+          signupError.textContent = err.message;
+        });
+    };
+
+    // Auth state
     auth.onAuthStateChanged(user => {
       if (user) {
         currentUserId = user.uid;
-        loadProfile(currentUserId);
+        authSection.classList.add("hidden");
+        profileSection.classList.remove("hidden");
+        logoutBtn.classList.remove("hidden");
+        loadProfile();
       } else {
-        window.location.href = "login.html";
+        currentUserId = null;
+        authSection.classList.remove("hidden");
+        profileSection.classList.add("hidden");
+        logoutBtn.classList.add("hidden");
       }
     });
 
-    function loadProfile(uid) {
-      db.ref("users/" + uid).once("value").then(snapshot => {
+    function loadProfile() {
+      db.ref("users/" + currentUserId).once("value").then(snapshot => {
         const data = snapshot.val() || {};
         nameView.textContent = data.name || '';
         ageView.textContent = data.age || '';
         genderView.textContent = data.gender || '';
         bioView.textContent = data.bio || '';
-        profilePicView.src = data.profilePicture || 'https://via.placeholder.com/100';
+        profilePicView.src = data.profilePicture || 'https://via.placeholder.com/120';
 
-        // Populate edit inputs
+        // Fill inputs
         nameInput.value = data.name || '';
         ageInput.value = data.age || '';
         genderInput.value = data.gender || '';
@@ -107,35 +279,28 @@
       });
     }
 
-    saveBtn.onclick = () => {
-      const name = nameInput.value.trim();
-      const age = ageInput.value.trim();
-      const gender = genderInput.value.trim();
-      const bio = bioInput.value.trim();
-      const profilePicture = picUrlInput.value.trim();
+    function setEditMode(isEdit) {
+      profileView.classList.toggle("hidden", isEdit);
+      profileEdit.classList.toggle("hidden", !isEdit);
+      editProfileBtn.classList.toggle("hidden", isEdit);
+    }
 
-      db.ref("users/" + currentUserId).update({
-        name, age, gender, bio, profilePicture
-      }).then(() => {
-        loadProfile(currentUserId);
-      });
-    };
+    editProfileBtn.onclick = () => setEditMode(true);
 
-    editModeBtn.onclick = () => {
-      setEditMode(true);
+    saveProfileBtn.onclick = () => {
+      const updated = {
+        name: nameInput.value.trim(),
+        age: ageInput.value.trim(),
+        gender: genderInput.value.trim(),
+        bio: bioInput.value.trim(),
+        profilePicture: picUrlInput.value.trim()
+      };
+      db.ref("users/" + currentUserId).update(updated).then(loadProfile);
     };
 
     logoutBtn.onclick = () => {
-      auth.signOut().then(() => {
-        window.location.href = "index.html";
-      });
+      auth.signOut();
     };
-
-    function setEditMode(isEdit) {
-      profileView.style.display = isEdit ? "none" : "block";
-      profileEdit.style.display = isEdit ? "block" : "none";
-      editModeBtn.style.display = isEdit ? "none" : "inline-block";
-    }
   </script>
 </body>
 </html>
